--- a/package.json
+++ b/package.json
@@ -8,8 +8,14 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "bootstrap": "^4.4.1",
+    "bootstrap-vue": "^2.1.0",
     "core-js": "^3.4.3",
-    "vue": "^2.6.10"
+    "plone-vue": "^1.2.1",
+    "vue": "^2.6.10",
+    "vue-router": "^3.1.3",
+    "vuex": "^3.1.2",
+    "axios": "latest"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
