--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "plone-vue": "^1.2.1",
     "sass": "^1.24.4",
     "vue": "^2.6.10",
+    "vue-ls": "^3.2.1",
     "vue-router": "^3.1.3",
     "vuex": "^3.1.2"
   },
