Favicon is loaded from URL specified in config.json

--- a/public/config_sample.json
+++ b/public/config_sample.json
@@ -1,5 +1,6 @@
 {
   "apiRoot": "http://localhost:8080/",
   "ploneRoot": "plone",
-  "mapsApiKey": "googleMapsAPIKey"
+  "mapsApiKey": "googleMapsAPIKey",
+  "faviconURL": "https://www.beispielurl.com/favicon.ico"
 }
