--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "bootstrap": "^4.4.1",
     "bootstrap-vue": "^2.2.2",
     "core-js": "^3.6.4",
+    "material-icons": "^0.3.1",
     "plone-vue": "^1.2.1",
     "sass": "^1.25.0",
     "vue": "^2.6.10",
     "vue-ls": "^3.2.1",
     "vue-router": "^3.1.5",
+    "vuesax": "^3.11.13",
     "vuex": "^3.1.2"
   },
   "devDependencies": {
