--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "bootstrap-vue": "^2.2.2",
     "core-js": "^3.6.4",
     "material-icons": "^0.3.1",
-    "plone-vue": "^1.2.1",
+    "path.join": "^1.0.0",
     "sass": "^1.25.0",
     "vue": "^2.6.10",
     "vue-ls": "^3.2.1",
