--- a/public/config_sample.json
+++ b/public/config_sample.json
@@ -3,6 +3,5 @@
   "apiRoot": "http://localhost:8080/",
   "ploneRoot": "plone",
   "mapsApiKey": "googleMapsAPIKey",
-  "faviconURL": "https://www.beispielurl.com/favicon.ico",
-  "sideBar": true
+  "faviconURL": "https://www.beispielurl.com/favicon.ico"
 }
