--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "plues",
-  "version": "0.6.1",
+  "version": "0.7.0",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "axios": "^0.19.1",
+    "body-scroll-lock": "^2.6.4",
     "bootstrap": "^4.4.1",
     "bootstrap-vue": "^2.2.2",
     "core-js": "^3.6.4",
@@ -17,8 +18,8 @@
     "sass": "^1.25.0",
     "vue": "^2.6.10",
     "vue-ls": "^3.2.1",
+    "vue-material": "^1.0.0-beta-11",
     "vue-router": "^3.1.5",
-    "vuesax": "^3.11.13",
     "vuex": "^3.1.2"
   },
   "devDependencies": {
