--- a/public/config_sample.json
+++ b/public/config_sample.json
@@ -1,5 +1,5 @@
 {
-  "$schema": "https://plues.jp-studios.de/config_schema.json",
+  "$schema": "./config_schema.json",
   "apiRoot": "http://localhost:8080/",
   "ploneRoot": "plone",
   "mapsApiKey": "googleMapsAPIKey",
